Fix app on java 17